fix spacing issue on projects page

--- a/src/components/Project/assets/scss/style.scss
+++ b/src/components/Project/assets/scss/style.scss
@@ -4,7 +4,7 @@
 
 .projects {
   color: var(--primary-light);
-
+  padding-top: 10vh;
   .project-list {
     display: flex;
     flex-wrap: wrap;
@@ -29,7 +29,7 @@
       justify-content: space-around;
       align-items: center;
       opacity: 0;
-      transition: all 0.3s ease-in
+      transition: all 0.3s ease-in;
     }
 
     &:hover {
@@ -62,6 +62,8 @@
 
 @media screen and (min-width: 790px) {
   .projects {
+    padding-top: 5vh;
+
     .project-list {
       .card {
         width: 40vw;
@@ -69,4 +71,3 @@
     }
   }
 }
-
